project/practice/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata: 
  name: nginx-deploy
  namespace: nginx
  labels: 
    app: nginx-deploy

spec: 
  replicas: 2
  selector:
    matchLabels:
      app: nginx-pod

  template:
    metadata:
      labels:
        app: nginx-pod
      
    spec: 
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
