project/practice/flask-dep.yml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: flask-deployment 
  namespace: nginx
  labels:
    app: flask-deployment
  
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: flask-pod
  template:
    metadata:
      labels:
        app: flask-pod
    spec: 
      containers:
        - name: flask-app
          image: sunilchouha/notes-app:latest
          ports:
          - containerPort: 5000
