project/practice/flask-service.yml
apiVersion: v1
kind: Service

metadata: 
  name: flask-service
  namespace: nginx

spec: 
  type: ClusterIP
  selector:
    app: flask-pod
  ports: 
  - port: 5000
    targetPort: 5000
