project/practice/service.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service 
  namespace: nginx

spec: 
  type: ClusterIP
  selector:
    app: nginx-pod
  ports: 
  - port: 80
    targetPort: 80
