project/practice/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress

# metadata: 
#   name: ingress 
#   namespace: nginx
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /

# spec: 
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: nginx-service
#             port: 
#               number: 80

#       - pathType: Prefix
#         path: /app
#         backend:
#           service:
#             name: flask-service
#             port: 
#               number: 5000


apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx  

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      - path: /app
        pathType: Prefix
        backend:
          service:
            name: flask-service  
            port:
              number: 5000
